[gd_scene load_steps=22 format=3 uid="uid://ccrgslptfvujl"]

[ext_resource type="Script" uid="uid://dmfk2y87ehpk0" path="res://scripts/Player.gd" id="1_sse7a"]
[ext_resource type="Script" uid="uid://blpiq2qfwwrbl" path="res://scripts/stamina.gd" id="3_xxutp"]
[ext_resource type="Texture2D" uid="uid://dxo2ipewn6lav" path="res://assets/sprites/main_character_animation1.png" id="4_tuyoq"]
[ext_resource type="Script" uid="uid://b2xavgnhnekor" path="res://scripts/hitbox.gd" id="5_cmeds"]
[ext_resource type="Texture2D" uid="uid://brs4cq6xam4na" path="res://assets/sprites/main_character_animation2.png" id="5_fjrip"]
[ext_resource type="Script" uid="uid://b25ntns06y3kc" path="res://enemies/scripts/hurtbox.gd" id="6_lsjhy"]
[ext_resource type="Script" uid="uid://ct28a5ovxts7" path="res://scripts/node resources/health.gd" id="7_dmkbe"]
[ext_resource type="Script" uid="uid://jn5855mvfk1t" path="res://player/camera_2d.gd" id="8_rgyib"]

[sub_resource type="AtlasTexture" id="AtlasTexture_fjrip"]
atlas = ExtResource("4_tuyoq")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_smehm"]
atlas = ExtResource("4_tuyoq")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_oprun"]
atlas = ExtResource("5_fjrip")
region = Rect2(384, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tuyoq"]
atlas = ExtResource("4_tuyoq")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ur7pv"]
atlas = ExtResource("4_tuyoq")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y4r1p"]
atlas = ExtResource("4_tuyoq")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d2wvv"]
atlas = ExtResource("4_tuyoq")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3v2ag"]
atlas = ExtResource("4_tuyoq")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jej6c"]
atlas = ExtResource("4_tuyoq")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_f1ej7"]
atlas = ExtResource("4_tuyoq")
region = Rect2(256, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_ur7pv"]
animations = [{
"frames": [{
"duration": 3.0,
"texture": SubResource("AtlasTexture_fjrip")
}, {
"duration": 3.0,
"texture": SubResource("AtlasTexture_smehm")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_oprun")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tuyoq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ur7pv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y4r1p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d2wvv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3v2ag")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jej6c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f1ej7")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ceyrs"]
size = Vector2(20, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yoc62"]
size = Vector2(22.5, 34.5)

[node name="Player" type="CharacterBody2D" groups=["Player"]]
position = Vector2(-1, -16)
script = ExtResource("1_sse7a")

[node name="Health" type="Node" parent="."]
script = ExtResource("7_dmkbe")
max_health = 5

[node name="Stamina" type="Node" parent="."]
script = ExtResource("3_xxutp")
max_stamina = 50.0
stamina = 50.0
metadata/_custom_type_script = "uid://blpiq2qfwwrbl"

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_ur7pv")
animation = &"jump"
autoplay = "walk"
frame_progress = 0.0368562

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_ceyrs")

[node name="HitBox" type="Area2D" parent="."]
position = Vector2(19, 1)
collision_layer = 4
collision_mask = 0
script = ExtResource("5_cmeds")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(-19, 0)
shape = SubResource("RectangleShape2D_yoc62")

[node name="HurtBox" type="Area2D" parent="." node_paths=PackedStringArray("health")]
position = Vector2(47, 4)
collision_layer = 0
collision_mask = 2
script = ExtResource("6_lsjhy")
health = NodePath("../Health")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(-47, -3)
shape = SubResource("RectangleShape2D_yoc62")

[node name="MovementTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2.5, 2.5)
script = ExtResource("8_rgyib")

[connection signal="health_depleted" from="Health" to="." method="_on_health_health_depleted"]
[connection signal="received_damage" from="HurtBox" to="." method="_on_hurt_box_received_damage"]
[connection signal="timeout" from="MovementTimer" to="." method="_on_movement_timer_timeout"]
